--- a/src/index.css
+++ b/src/index.css
@@ -239,8 +239,8 @@ a {
  max-width: 100%;
 }
 .card-box .card-box-1{
- 
-  padding: 50px 20px;
+  padding: 40px 20px;
+  height: 200px;
   background-color: black;
   opacity: 0.95;
 }
@@ -254,6 +254,7 @@ a {
 .card-box-2{
   padding: 20px 20px;
   background-color: black;
+  height: 190px;
 }
 .card-box-2 h2{
   font-size: 25px;
@@ -261,7 +262,193 @@ a {
   margin-top: 20px;
 }
 .card-box-2 i{
-  margin-top: 20px;
+  margin-top: 30px;
   font-size: 30px;
   color: white;
 }
+
+.quote{
+  background-color: #6A787B;
+  padding: 120px 55px;
+}
+.quote-head{
+  margin-top: 40px;
+}
+.quote span{
+  font-size: 85px;
+  color: #ffffff;
+  /* font-weight: bolder; */
+  font-weight: 300;
+  opacity: 0.9;
+  margin-top: 30px;
+}
+.quote-icon i{
+  font-size: 50px;
+  color: #ffffff;
+}
+.quote-icon .right-quo{
+  margin-top: 40px;
+}
+.quote-para{
+  margin-top: 60px;
+}
+.quote-para .first-p{
+  color: #ffffff;
+ letter-spacing: 1px;
+  font-weight: 500;
+  font-size: 25px;
+}
+.quote-para .second-p{
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 19px;
+  margin-top: 10px;
+  letter-spacing: 1px;
+}
+.see-how{
+  padding: 100px 55px;
+}
+.agent-secret{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.agent h2{
+  font-size: 42px;
+  line-height: 1.2;
+  font-weight: 500;
+}
+
+.agent-1 p{
+  font-size: 24px;
+  line-height: 1.5;
+  color: #6c6c6c;
+  
+}
+/* #overlayText {
+  position:absolute;
+   top:30%;
+   left:20%;
+   z-index:1;
+ }
+ 
+ #topText {
+   color: white;
+   font-size: 20px;
+   align-self: center;
+ } */
+
+ .video-player video{
+  width: 1200px;
+  max-width: 100%;
+  display: block;
+  margin: 60px auto;
+  border: none;
+  filter: brightness(.8);
+ }
+ .vid-btn {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+ .vid-btn button{
+  background-color: #c00000;
+  width: 150px;
+  max-width: 100%;
+  border: none;
+  height: 40px;
+  margin: 0 10px;
+  outline: none;
+  cursor: pointer;
+  color: #fff;
+  font-size: 20px;
+  border-radius: 2px;
+ }
+ .vid-btn button:hover{
+  background-color: crimson;
+ }
+
+ .connect-btn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+
+ .connect-btn button{
+  margin-top: 20px;
+    width: 360px;
+    max-width: 100%;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #000;
+    color: #000;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 0px 20px;
+    border-radius: 2px;
+    opacity: 0.9;
+    background-color: transparent;
+}
+
+.connect-btn i{
+  font-size: 25px;
+  font-weight: thin;
+ }
+ .connect-btn button:hover{
+   transition: all 0.5s;
+   color: #c00000;
+   border: 1px solid #c00000;
+ }
+ 
+ .connect-btn button:hover  i{
+   transform: scale(1.3) translate(3px);
+   transition: all 0.4s;
+ }
+ .our-customer{
+   padding: 60px 55px;
+ }
+ .customer-1{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+ }
+ .customer-1 h2{
+  font-size: 76px;
+  font-weight: 500;
+ }
+
+ .custom-btn button{
+  margin-top: 20px;
+    width: 280px;
+    max-width: 100%;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #000;
+    color: #000;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 0px 20px;
+    border-radius: 2px;
+    opacity: 0.9;
+    background-color: transparent;
+ }
+ .custom-btn i{
+  font-size: 25px;
+  font-weight: thin;
+ }
+ .custom-btn button:hover{
+   transition: all 0.5s;
+   color: #c00000;
+   border: 1px solid #c00000;
+ }
+ 
+ .custom-btn button:hover  i{
+   transform: scale(1.3) translate(3px);
+   transition: all 0.4s;
+ }
+ 
