--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   margin: 0;
   box-sizing: border-box;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  
 }
 
 .header {
@@ -12,7 +11,7 @@
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 99;
   transition: 0.3s ease-in;
   overflow: hidden;
   background-color: transparent;
@@ -156,7 +155,6 @@ a {
   .nav-menu.active {
     left: 0;
   }
-
 
   .header .navbar img {
     width: 150px;
@@ -657,6 +655,269 @@ a {
   .quote{
     padding: 60px 20px;
   }
+}
+
+.home-pop{
+  position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #0008;
+    z-index: 1000;
+    overflow: auto;
+}
+.home-pop .pop-btn{
+  background-color: #c00000;
+  width: 150px;
+  max-width: 100%;
+  border: none;
+  font-size: 18px;
+  height: 45px;
+  outline: none;
+  cursor: pointer;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 2px;
+}
+.home-pop i{
+  color: #ffffff;
+  background-color: #c00000;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  position: absolute;
+  font-size: 20px;
+  top: 0.5rem;
+  z-index: 90;
+  right: 2rem;
+}
+.popup-container{
+  max-width: 1000px;
+  width: 100%;
+  height: 100%;
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px auto;
+}
+
+.css-1hv8oq8-MuiStepLabel-label {
+  display: none;
+}
+
+.css-1hv8oq8-MuiStepLabel-label.Mui-completed{
+  display: none;
+}
+/* .css-1hv8oq8-MuiStepLabel-label.Mui-active{
+   display: none;
+} */
+.css-1hv8oq8-MuiStepLabel-label{
+  display: none;
+}
+.css-1vyamtt-MuiStepLabel-labelContainer{
+  display: none;
+}
+.css-1e6y48t-MuiButtonBase-root-MuiButton-root{
+  background-color: #c00000;
+}
+.css-1sn4lm3-MuiTypography-root{
+  display: none;
+}
+.wrapper {
+  margin: 10px auto 0;
+  width: 100%;
+  max-width: 1720px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.wrapper p{
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+/* content */
+.content {
+  text-align: center;
+}
+
+.content h1 {
+  letter-spacing: 1px;
+}
+
+
+/* form */
+.form {
+  width: 100%;
+  margin: 25px 0;
+}
+
+.top-form,
+.bottom-form {
+  width: 100%;
+  min-height: 65px;
+  margin: 30px 0;
+}
+
+.form input[type="text"],
+.form textarea, .form input[type="email"]  {
+  border: none;
+  background-color: #eeeeee;
+  padding: 16px 10px;
+  outline: none;
+  border-radius: 5px;
+  width: 100%;
+  transition: all 0.2s ease;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.form .fileup{
+  border: none;
+  background-color: #eeeeee;
+  padding: 16px 10px;
+  outline: none;
+  border-radius: 5px;
+  width: 100%;
+  transition: all 0.2s ease;
+  font-size: 16px;
+  font-weight: 500;
+  color: transparent;
+  /* opacity: 0; */
+  /* position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    opacity: 0; */
+}
+
+#hide input[type=file] {
+  display:none;
+  margin:10px;
+  border: none;
+  background-color: #eeeeee;
+  padding: 16px 10px;
+  outline: none;
+  border-radius: 5px;
+  width: 100%;
+  transition: all 0.2s ease;
+  font-size: 16px;
+  font-weight: 500;
+  color: transparent;
+  }
+  #hide input[type=file] + label {
+  display:inline-block;
+  margin:20px;
+  padding: 4px 32px;
+  background-color: #FFFFFF;
+  border:solid 1px #666F77;
+  border-radius: 6px;
+  color:#666F77;
+  }
+  #hide input[type=file]:active + label {
+  background-image: none;
+  background-color:#2D6C7A;
+  color:#FFFFFF;
+  }
+
+
+
+
+.form input:focus,
+.form textarea:focus {
+  outline: none;
+}
+
+.form .label {
+  margin-bottom: 5px;
+  border: none;
+  background-color: #eeeeee;
+  padding: 16px 10px;
+  outline: none;
+  border-radius: 5px;
+  width: 100%;
+  transition: all 0.2s ease;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+/* top-contact */
+.top-form .inner-form {
+  width: 47.5%;
+  float: left;
+  margin-right: 5%;
+}
+
+.top-form .inner-form-1{
+  width: 21%;
+  float: left;
+  margin-right: 5%;
+}
+
+
+.top-form .inner-form:last-child {
+  margin-right: 0;
+}
+/* bottom-form */
+.bottom-form textarea {
+  max-height: 100%;
+  height: 50px;
+  width: 100%;
+  resize: none;
+  overflow: hidden;
+}
+/* @media screen and (max-width: 460px) {
+  .top-form .inner-form {
+    width: 100%;
+    margin: 5px 0;
+  }
+
+  .bottom-form textarea{
+    margin: 10px 0;
+  }
+
+  .inner-form input{
+    margin: 10px 0;
+  }
+
+  .top-form,
+  .bottom-form {
+    margin: 5px 0;
+  }
+
+  .form {
+    margin-top: 10px;
+  }
+} */
+.css-1u4zpwo-MuiSvgIcon-root-MuiStepIcon-root.Mui-active {
+  /* color: #c00000 !important; */
+  border: 1.5px solid #c00000;
+  color: #c00000 !important;
+}
+.css-1u4zpwo-MuiSvgIcon-root-MuiStepIcon-root.Mui-completed{
+  /* color: #000 !important; */
+  border: 1.5px solid #c1bfbf;
+  border-radius: 50%;
+  fill: #c1bfbf !important;
+}
+
+.css-117w1su-MuiStepIcon-text {
+  fill: #c1bfbf !important;
+}
+.css-1u4zpwo-MuiSvgIcon-root-MuiStepIcon-root{
+  color: transparent !important;
+    border: 1.5px solid #c1bfbf;
+    border-radius: 50%;
 }
 
 
