--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
   max-width: 1240px;
   margin: auto;
   height: 100%;
-  padding: 0 1rem;
+  padding: 0 2rem;
 }
 
 .header .nav-menu a {
@@ -102,22 +102,21 @@ a {
 }
 
 .btn-primary {
-  background-color: #c00000;
-  font-size: 18px;
+  background-color: #0371C0;
+  font-size: 17px;
   padding: 0px 20px;
+  display: block;
+  margin: auto;
   height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   border: none;
-  width: 200px;
+  width: 170px;
   max-width: 100%;
   border-radius: 2px;
   color: white;
 }
 
 .btn-primary:hover{
-  background: crimson;
+  background: #0677c7;
   transition: all 0.5s;
 }
 .btn-primary:hover i{
@@ -166,7 +165,7 @@ a {
   }
 }
 
-.welcome{
+/* .welcome{
   background-color: #ffffff;
   height: 100vh;
   width: 100%;
@@ -213,105 +212,441 @@ a {
 .homi-btn button:hover{
   transition: all 0.5s;
   background-color:crimson;
-}
+} */
 
-.homi-btn button:hover  i{
+/* .homi-btn button:hover  i{
   transform: scale(1.3) translate(3px);
   transition: all 0.4s;
-}
-.transform{
-  padding: 40px 55px;
-}
-.transform h2{
-  font-size: 38px;
-  opacity: 0.9;
-  /* letter-spacing: 1px; */
-}
+} */
 
-/* ================card css================ */
 
-.card{
+.joint_us{
+  width: 100%;
+  /* height: 100vh; */
+  position: relative;
+  background: url('./images/Rectangle\ 16.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 40px 0px;
+  padding: 60px 40px;
 }
-.card-box{
-  background: #ffffff;
- width: 270px;
- max-width: 100%;
- margin: 0 3px;
+.joint-home{
+  margin-top: 50px;
 }
-.card-box .card-box-1{
-  padding: 40px 20px;
-  height: 200px;
-  background-color: black;
-  opacity: 0.95;
-}
-.card-box .card-box-1 img{
-  max-width: 200px;
-  width: 100%;
-  display: block;
-  margin:auto;
 
+.joint-home-heading h2{
+  font-size: 38px;
+  color: #000000;;
 }
-.card-box-2{
-  padding: 20px 20px;
-  background-color: black;
-  height: 190px;
-}
-.card-box-2 h2{
-  font-size: 25px;
-  color: white;
+
+.joint-home-para{
   margin-top: 20px;
 }
-.card-box-2 i{
-  margin-top: 30px;
-  font-size: 30px;
-  color: white;
+
+.joint-home-para p{
+  font-size: 20px;
+  color: #000000;
+  opacity: 0.5;
+}
+.pic_joint{
+  position: relative;
+}
+.pic_joint img{
+  position: relative;
+   width: 100%;
+   top: 63px;
+   z-index: 0;
+   max-width: 560px;
 }
 
-.quote{
-  background-color: #6A787B;
-  padding: 120px 55px;
-}
-.quote-head{
+.joint-button{
+  width: 160px;
+  height: 40px;
   margin-top: 40px;
-}
-.quote span{
-  font-size: 85px;
+  background-color: #0371C0;
+  border: none;
   color: #ffffff;
-  /* font-weight: bolder; */
-  font-weight: 300;
-  opacity: 0.9;
+  font-size: 17.5px;
+}
+
+.joint-button:hover{
+   background-color: #0677c7;
+   transition: all 0.5s;
+}
+
+
+/* =================real and second section============= */
+.real_estate{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 65px 40px;
+}
+
+.first-real-header h2{
+  font-size: 38px;
+  font-weight: bold;
+  color: #000000;
+}
+.first-real-para{
+  margin-top: 20px;
+}
+.first-real-para p{
+  font-size: 20px;
+  color: #000000;
+  opacity: 0.6;
+  font-weight: 500;
+}
+.first-real-img{
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+}
+.first-real-img img{
+  width: 230px;
+  max-width: 100%;
+  height: 65px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.first-real-img .se-imgasa{
+  margin-left: 20px;
+}
+.second-real img{
+  width: 100%;
+  max-width: 420px;
+}
+
+/* ================end================ */
+
+/* =============third section================== */
+.int-formation{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 60px 40px;
+  background: linear-gradient(to right, #C10100,#0170C1);
+}
+.first-inform .first-inform-heading h2{
+  color: #ffffff;
+  font-size: 38px;
+  font-weight: 600;
+}
+.first-inform-para{
   margin-top: 30px;
 }
-.quote-icon i{
-  font-size: 50px;
+.first-inform-para p{
   color: #ffffff;
+  opacity: 0.7;
+  font-size: 20px;
+  line-height: 30px;
 }
-.quote-icon .right-quo{
+.second-inform-para{
+  margin-top: 30px;
+}
+.second-inform-para p{
+  color: #ffffff;
+  opacity: 0.7;
+  font-size: 20px;
+  line-height: 30px;
+}
+.first-hras{
+  border: 0.5px solid #FFFFFF;
+  background: #ffffff;
+  opacity: 0.2;
   margin-top: 40px;
 }
-.quote-para{
-  margin-top: 60px;
+.third-inform-para{
+  margin-top: 18px;
 }
-.quote-para .first-p{
+.third-inform-para p{
   color: #ffffff;
- letter-spacing: 1px;
-  font-weight: 500;
-  font-size: 25px;
-}
-.quote-para .second-p{
-  color: #ffffff;
-  font-weight: 400;
+  opacity: 0.7;
   font-size: 19px;
+}
+.third-inform-para span{
+  margin-left: 10px;
+}
+.second-hras{
+  border: 0.5px solid #FFFFFF;
+  background: #ffffff;
+  opacity: 0.2;
+  margin-top: 18px;
+}
+.second-Inform img{
+  width: 100%;
+  max-width: 490px;
+  height: 490px;
+  max-height: 100%;
+  
+}
+
+/* ============third section end================= */
+
+/* ==============fourth-section================== */
+.company-benifits{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding: 60px 40px;
+}
+.company-benifits-first h2{
+   font-size: 38px;
+   color: #000000;
+}
+.company-benifits-para{
+  margin-top: 35px;
+}
+.company-benifits-para .company-benifits-flex{
+  display: flex;
+  align-items: center;
+  margin: 15px 0px;
+}
+.company-benifits-flex img{
+  width: 15px;
+  height: 15px;
+  max-width: 100%;
+}
+.company-benifits-flex p{
+  color: #000000;
+  font-weight: 400;
+  font-size: 20px;
+  margin-left: 10px;
+}
+.company-benifits-second img{
+  width: 100%;
+  max-width: 440px;
+  height: auto;
+  object-fit: cover;
+}
+.benifits-button{
+  width: 160px;
+  height: 40px;
+  margin-top: 38px;
+  background-color: #0371C0;
+  border: none;
+  color: #ffffff;
+  font-size: 17.5px;
+}
+/* =================fourth-section-end============== */
+
+/* =====================fitfh-card-section================== */
+.card-section{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 60px 35px;
+}
+.card-box{
+  position: relative;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background: #FFFFFF;
+  margin: 0 15px;
+  width: 100%;
+ z-index: 1;
+ border-radius: 10px;
+}
+.card-box h2{
+  font-size: 19px;
+  padding: 0 12px;
+  color: #2D3748;
+  margin-top: 20px;
+}
+.card-box p{
+  padding: 0 12px;
+  font-size: 15px;
+  color: #718096;
+  margin-top: 15px;
+  line-height: 22px;
+  font-family: 400;
+}
+.card-box img{
+  width: 100%;
+}
+.card-side{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 12px;
+  margin: 30px 0px;
+}
+.card-side small{
+  font-size: 13px;
+  color: #718096;
+}
+.card-side a{
+  color: #0371C0;
+  font-weight: 600;
+  border-bottom: 1.5px solid #0371C0;
+  font-size: 14px;
+}
+/* ==================fiftsmalh-card-section end=============== */
+
+/* ======================sixth section women start=================== */
+.women{
+  padding: 70px 40px;
+  position: relative;
+}
+.red-women{
+  background-color: #C10100;
+  display: flex;
+  align-items: center;
+  padding:0px 40px ;
+  height: 280px;
+  max-height: 100%;
+  border-radius: 10px;
+}
+.first-red-heading h2{
+  color: #FFFFFF;
+  font-size: 35px;
+}
+.second-red-women{
+  position: relative;
+}
+.second-red-women img{
+  position: relative;
+  top: -20px;
+  width: 100%;
+  max-width: 450px;
+  height: 325px;
+}
+.enquiry-btn{
+  width: 160px;
+  height: 40px;
+  background-color: #ffffff;
+  color: #C10100;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  font-size: 16px;
+  margin-top: 45px;
+  font-weight: 600;
+}
+/* =========================sixth section end============================ */
+footer{
+  padding: 60px 40px;
+  /* box-shadow: 30px 4px 60px rgba(0, 0, 0, 0.25);
+  filter: drop-shadow( 30px 4px 60px 0px #00000040); */
+  background-color: #fdf8f8;
+
+}
+.foot{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.logo-footer img{
+  width: 220px;
+  max-width: 100%;
+}
+.first-para{
+  margin-top: 20px;
+}
+.first-para span{
+  color: #000000;
+  font-weight: 600;
+  text-decoration: underline;
+}
+.first-para p{
+  color: #000000;
+  /* font-family: 'Montserrat'; */
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 20px;
+}
+.second-para{
+  margin-top: 15px;
+}
+.second-para p{
+  color: #000000;
+  /* font-family: 'Montserrat'; */
+  font-weight: 400;
+  font-size: 15px;
+}
+.another-second{
   margin-top: 10px;
-  letter-spacing: 1px;
 }
-.see-how{
-  padding: 100px 55px;
+.another-second .another-sec-first{
+   margin-top: 10px;
 }
+.social-links {
+ display: flex;
+
+}
+.social-links span{
+  background-color:  #0371C0;
+ padding: 7px 7px;
+ border-radius: 4px;
+}
+.social-links{
+  margin-top: 15px;
+}
+.social-links img{
+  width: 15px;
+  display: block;
+  margin: auto;
+}
+.social-links .second{
+  margin-left: 20px;
+}
+.social-links .third{
+  margin-left: 20px;
+}
+.fourth-foot .fourth-foot-first{
+  display: flex;
+}
+.fourth-foot-first img{
+  width: 120px;
+  max-width: 100%;
+  height: auto;
+}
+.fourth-foot-first .second-ima{
+  margin-left: 10px;
+}
+.fourth-foot-first .third-ima{
+  margin-left: 10px;
+}
+.v-link{
+  margin-top: 10px;
+}
+.foot-hr{
+  background: #000000;
+  mix-blend-mode: normal;
+  opacity: 0.2;
+border: 0.2px solid rgba(0, 0, 0, 0.35);
+margin-top: 30px;
+}
+.bottom-para{
+  margin-top: 20px;
+}
+.bottom-para p{
+  text-align: center;
+  color: #000000;
+  opacity: 0.65;
+  font-size: 14px;
+}
+.input-era{
+  margin-top: 40px;
+}
+.input-era select{
+  border: 0.5px solid rgba(0, 0, 0, 0.35);
+  opacity: 0.8;
+  width: 150px;
+  height: 40px;
+  padding: 0px 10px;
+  font-size: 15px;
+  border-radius: 5px;
+  outline: none;
+}
+/* ==================footer======================== */
+   
+/* =========================footer end====================== */
+/* ================card css================ */
+
+
 .agent-secret{
   display: flex;
   align-items: center;
@@ -701,7 +1036,7 @@ a {
 .popup-container{
   max-width: 1000px;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   background: white;
   padding: 20px;
   border-radius: 5px;
@@ -790,14 +1125,6 @@ a {
   font-size: 16px;
   font-weight: 500;
   color: transparent;
-  /* opacity: 0; */
-  /* position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    opacity: 0; */
 }
 
 .form input:focus,
@@ -908,6 +1235,3 @@ a {
 .css-1v2gfp5{
   display: none !important;
 }
-
-
- 
