--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,18 @@
   box-sizing: border-box;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+body{
+  overflow-x: hidden
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito+Sans&family=Playfair+Display&family=Poppins&family=Roboto&family=Roboto+Slab&display=swap');
+
 
 .header {
-  position: fixed;
-  height: 90px;
+  position: sticky;
+  background-color: white;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  height: 70px;
   width: 100%;
   top: 0;
   left: 0;
@@ -47,7 +55,7 @@
   max-width: 1240px;
   margin: auto;
   height: 100%;
-  padding: 0 2rem;
+  padding: 0 30px;
 }
 
 .header .nav-menu a {
@@ -102,23 +110,25 @@ a {
 }
 
 .btn-primary {
-  background-color: #0371C0;
+  background-color: #C10100;
   font-size: 17px;
-  padding: 0px 20px;
   display: block;
   margin: auto;
   height: 40px;
   border: none;
-  width: 170px;
+  width: 195px;
   max-width: 100%;
   border-radius: 2px;
   color: white;
+  font-family: 'Gilroy-BoldItalic';
+  cursor: pointer;
+  
 }
 
-.btn-primary:hover{
+/* .btn-primary:hover{
   background: #0677c7;
   transition: all 0.5s;
-}
+} */
 .btn-primary:hover i{
   transform: scale(1.3) translate(3px);
   transition: all 0.4s;
@@ -222,7 +232,6 @@ a {
 
 .joint_us{
   width: 100%;
-  /* height: 100vh; */
   position: relative;
   background: url('./images/Rectangle\ 16.png');
   background-position: center;
@@ -231,10 +240,10 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 60px 40px;
+  padding: 50px 40px;
 }
 .joint-home{
-  margin-top: 50px;
+  margin-top: 60px;
 }
 
 .joint-home-heading h2{
@@ -257,7 +266,7 @@ a {
 .pic_joint img{
   position: relative;
    width: 100%;
-   top: 63px;
+   top: 53px;
    z-index: 0;
    max-width: 560px;
 }
@@ -270,6 +279,8 @@ a {
   border: none;
   color: #ffffff;
   font-size: 17.5px;
+  cursor: pointer;
+  outline: none;
 }
 
 .joint-button:hover{
@@ -392,6 +403,7 @@ a {
   align-items: flex-start;
   justify-content: space-between;
   padding: 60px 40px;
+  /* background-color: #EBEBEB; */
 }
 .company-benifits-first h2{
    font-size: 38px;
@@ -430,6 +442,8 @@ a {
   border: none;
   color: #ffffff;
   font-size: 17.5px;
+  outline: none;
+  cursor: pointer;
 }
 /* =================fourth-section-end============== */
 
@@ -527,7 +541,7 @@ a {
 }
 /* =========================sixth section end============================ */
 footer{
-  padding: 60px 40px;
+  padding: 40px 40px;
   /* box-shadow: 30px 4px 60px rgba(0, 0, 0, 0.25);
   filter: drop-shadow( 30px 4px 60px 0px #00000040); */
   background-color: #fdf8f8;
@@ -537,6 +551,11 @@ footer{
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+}
+.foot-header h2{
+  font-size: 18px;
+  font-family: 'Montserrat', serif;
+  font-weight: 600;
 }
 .logo-footer img{
   width: 220px;
@@ -549,78 +568,82 @@ footer{
   color: #000000;
   font-weight: 600;
   text-decoration: underline;
+  font-weight: bold;
+  font-family: 'Montserrat', serif;
 }
 .first-para p{
   color: #000000;
-  /* font-family: 'Montserrat'; */
   font-weight: 400;
-  font-size: 15px;
+  font-size: 12px;
   line-height: 20px;
+  font-family: 'Montserrat', serif;
 }
 .second-para{
   margin-top: 15px;
 }
+.second-para .par{
+  line-height: 23px;
+}
 .second-para p{
   color: #000000;
-  /* font-family: 'Montserrat'; */
   font-weight: 400;
-  font-size: 15px;
+  font-size: 12px;
+  font-family: 'Montserrat', serif;
 }
 .another-second{
-  margin-top: 10px;
+  margin-top: 12px;
 }
 .another-second .another-sec-first{
-   margin-top: 10px;
+   margin-top: 12px;
 }
 .social-links {
  display: flex;
-
 }
 .social-links span{
   background-color:  #0371C0;
- padding: 7px 7px;
+ padding: 5px 5px;
  border-radius: 4px;
 }
 .social-links{
   margin-top: 15px;
 }
 .social-links img{
-  width: 15px;
+  width: 10px;
   display: block;
   margin: auto;
 }
 .social-links .second{
-  margin-left: 20px;
+  margin-left: 30px;
 }
 .social-links .third{
-  margin-left: 20px;
+  margin-left: 30px;
 }
 .fourth-foot .fourth-foot-first{
   display: flex;
 }
 .fourth-foot-first img{
-  width: 120px;
+  width: 110px;
   max-width: 100%;
   height: auto;
 }
 .fourth-foot-first .second-ima{
-  margin-left: 10px;
+  margin-left: 12px;
 }
 .fourth-foot-first .third-ima{
-  margin-left: 10px;
+  margin-left: 12px;
 }
 .v-link{
-  margin-top: 10px;
+  margin-top: 12px;
 }
 .foot-hr{
   background: #000000;
   mix-blend-mode: normal;
   opacity: 0.2;
-border: 0.2px solid rgba(0, 0, 0, 0.35);
-margin-top: 30px;
+  border: 0.2px solid rgba(0, 0, 0, 0.35);
+  margin-top: 30px;
 }
 .bottom-para{
-  margin-top: 20px;
+  padding: 20px 0px;
 }
 .bottom-para p{
   text-align: center;
@@ -629,17 +652,29 @@ margin-top: 30px;
   font-size: 14px;
 }
 .input-era{
-  margin-top: 40px;
+  margin-top: 50px;
+  position: relative;
+}
+.earth-img{
+  position: relative;
+}
+.earth-img img{
+  position: absolute;
+  width: 12px;
+  top: 13px;
+  left: 6px;
 }
 .input-era select{
   border: 0.5px solid rgba(0, 0, 0, 0.35);
   opacity: 0.8;
   width: 150px;
-  height: 40px;
-  padding: 0px 10px;
+  height: 38px;
+  padding: 0px 20px;
   font-size: 15px;
   border-radius: 5px;
   outline: none;
+  font-family: 'Gilroy-MediumItalic';
+  background-color: transparent;
 }
 /* ==================footer======================== */
    
@@ -647,183 +682,9 @@ margin-top: 30px;
 /* ================card css================ */
 
 
-.agent-secret{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.agent h2{
-  font-size: 42px;
-  line-height: 1.2;
-  font-weight: 500;
-}
-
-.agent-1 p{
-  font-size: 24px;
-  line-height: 1.5;
-  color: #6c6c6c;
-  
-}
 
 
- .video-player video{
-  width: 1200px;
-  max-width: 100%;
-  display: block;
-  margin: 60px auto;
-  border: none;
-  filter: brightness(.8);
- }
- .vid-btn {
-  margin-top: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
- }
- .vid-btn button{
-  background-color: #c00000;
-  width: 150px;
-  max-width: 100%;
-  border: none;
-  height: 40px;
-  margin: 0 10px;
-  outline: none;
-  cursor: pointer;
-  color: #fff;
-  font-size: 20px;
-  border-radius: 2px;
- }
- .vid-btn button:hover{
-  background-color: crimson;
- }
-
- .connect-btn{
-  display: flex;
-  align-items: center;
-  justify-content: center;
- }
-
- .connect-btn button{
-  margin-top: 20px;
-    width: 360px;
-    max-width: 100%;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #000;
-    color: #000;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 0px 20px;
-    border-radius: 2px;
-    opacity: 0.9;
-    background-color: transparent;
-}
-
-.connect-btn i{
-  font-size: 25px;
-  font-weight: thin;
- }
- .connect-btn button:hover{
-   transition: all 0.5s;
-   color: #c00000;
-   border: 1px solid #c00000;
- }
- 
- .connect-btn button:hover  i{
-   transform: scale(1.3) translate(3px);
-   transition: all 0.4s;
- }
- .our-customer{
-   padding: 60px 55px;
- }
- .customer-1{
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
- }
- .customer-1 h2{
-  font-size: 76px;
-  font-weight: 500;
- }
-
- .custom-btn button{
-  margin-top: 20px;
-    width: 280px;
-    max-width: 100%;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #000;
-    color: #000;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 0px 20px;
-    border-radius: 2px;
-    opacity: 0.9;
-    background-color: transparent;
- }
- .custom-btn i{
-  font-size: 25px;
-  font-weight: thin;
- }
- .custom-btn button:hover{
-   transition: all 0.5s;
-   color: #c00000;
-   border: 1px solid #c00000;
- }
- 
- .custom-btn button:hover  i{
-   transform: scale(1.3) translate(3px);
-   transition: all 0.4s;
- }
-
- /* =============================swiper js============================ */
-.swift-js{
-  background-color: #ffffff;
-  border: 1px solid black;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-around;
-  padding: 60px 55px;
-  border-radius: 10px;
-  border: 1px solid  #8d8d8d;
-}
-.swift-img img{
-  width: 180px;
-  height: 180px;
-  max-width: 100%;
-  object-fit: cover;
-}
-
-.swift-para{
-  margin-top: 25px;
-}
-
-.swift-para .first-para{
-  font-size: 19px;
-  font-weight: 500;
-}
-
-.small-para{
-  margin-top: 20px;
-}
-.small-para .second-para{
-  font-size: 17px;
-  color: #8d8d8d;
-}
-.small-para .third-para{
-  font-size: 17px;
-  color: #8d8d8d;
-}
-.swifters-para .fourt-para{
-  font-size: 22px;
-  line-height: 1.5;
-}
-
-@media only screen and (max-width:945px){
+/* @media only screen and (max-width:945px){
   .card{
     flex-direction: column;
     
@@ -990,7 +851,7 @@ margin-top: 30px;
   .quote{
     padding: 60px 20px;
   }
-}
+} */
 
 .home-pop{
   position: fixed;
@@ -1002,6 +863,8 @@ margin-top: 30px;
     z-index: 1000;
     overflow: auto;
 }
+
+
 .home-pop .pop-btn{
   background-color: #c00000;
   width: 150px;
@@ -1032,15 +895,43 @@ margin-top: 30px;
   top: 0.5rem;
   z-index: 90;
   right: 2rem;
+  cursor: pointer;
 }
 .popup-container{
   max-width: 1000px;
   width: 100%;
   /* height: 100%; */
   background: white;
-  padding: 20px;
+  padding: 20px 0px;
   border-radius: 5px;
   margin: 20px auto;
+}
+
+.read-pop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0008;
+  z-index: 1000;
+  overflow: auto;
+}
+
+.read-pop i{
+  color: #ffffff;
+  background-color: #c00000;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  position: absolute;
+  font-size: 20px;
+  top: 0.5rem;
+  z-index: 90;
+  right: 2rem;
 }
 
 .css-1hv8oq8-MuiStepLabel-label {
@@ -1069,7 +960,7 @@ margin-top: 30px;
   margin: 10px auto 0;
   width: 100%;
   max-width: 1720px;
-  padding: 20px;
+  padding: 0px 0px;
   box-sizing: border-box;
 }
 
@@ -1091,7 +982,13 @@ margin-top: 30px;
 /* form */
 .form {
   width: 100%;
-  margin: 25px 0;
+  margin: 80px 0;
+  padding: 0px 40px;
+}
+
+
+.css-2royc9{
+  
 }
 
 .top-form,
@@ -1105,13 +1002,15 @@ margin-top: 30px;
 .form textarea, .form input[type="email"]  {
   border: none;
   background-color: #eeeeee;
-  padding: 16px 10px;
+  padding: 20px 10px;
   outline: none;
   border-radius: 5px;
   width: 100%;
   transition: all 0.2s ease;
-  font-size: 16px;
+  font-size: 14.5px;
   font-weight: 500;
+  color: #000000;
+  opacity: 0.8;
 }
 
 .form .fileup{
@@ -1234,4 +1133,245 @@ margin-top: 30px;
 }
 .css-1v2gfp5{
   display: none !important;
+}
+/* .acount{
+background: #FFFFFF;
+box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.1);
+padding: 20px 0px;
+} */
+
+/* =================yaha se naya================== */
+.step-hr{
+  border: 1.2px solid rgb(181, 179, 179);
+  width: 2000px;
+  max-width: 100%;
+  background: rgb(181, 179, 179);
+}
+.small-hr{
+  border: 1.2px solid #C00100;
+  width: 92px;
+  position: absolute;
+ background:#C00100 ;
+}
+.hr{
+  margin-top: 30px;
+}
+
+.stoper{
+  /* float:'right',padding:'0 30px',width:'230px',maxWidth:'100%' */
+  float: right;
+  padding: 0 30px;
+  width: 250px;
+  max-width: 100%;
+}
+.shadow h2{
+  padding: 0px 30px;
+}
+.shadow .step123{
+  text-align: center;
+  padding: 24px 30px;
+}
+.wrap-para{
+  padding: 0 30px;
+  text-align: center;
+}
+
+.steeper-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 25px;
+}
+.steeper-button .broking{
+  background: #EBF7FF;
+  border: 1.5px solid #0678C4;
+  width: 220px;
+  height: 60px;
+  border-radius: 8px 0px 0px 9px;
+  font-size: 17.5px;
+  color: #1B84C9;
+  
+}
+.steeper-button .broker-individual{
+  border: 1.5px solid #000000;
+  opacity: 0.6;
+  width: 220px;
+  height: 60px;
+  border-radius: 0px 8px 9px 0px;
+  font-size: 17.5px;
+  color: #101010;
+}
+
+.resend{
+  float: right;
+  color: #C00100;
+  font-size: 20px;
+  font-weight: bold;
+  position: relative;
+  right: 10px;
+}
+
+.res{
+  cursor: pointer;
+}
+
+/* =========================login css================ */
+.Login{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.form-wraper-login{
+  margin-top: 150px;
+}
+.Login_image img{
+  /* max-width: 560px; */
+  width: 100%;
+  height: 800px;
+  object-fit: cover;
+  filter: brightness(0.55);
+}
+.form-wraper-login{
+  padding: 0 60px
+}
+.input-form input[type="text"]{
+  border: none;
+  background-color: #eeeeee;
+  padding: 20px 10px;
+  outline: none;
+  border-radius: 5px;
+  width: 580px;
+  font-weight: 500;
+  max-width: 100%;
+  transition: all 0.2s ease;
+  font-size: 16.5px;
+  font-weight: 500;
+  color: #000000;
+  opacity: 0.8;
+  margin: 20px 0px;
+}
+.firmas{
+  margin-top: 20px;
+  width: 100%;
+}
+.firmas button{
+  background-color: #C00100;
+  border: none;
+  width: 240px;
+  max-width: 100%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1), 0px 4px 4px rgba(0, 0, 0, 0.25);
+ height: 50px;
+ color: #ffffff;
+ font-size: 20px;
+ border-radius: 2px;
+ font-weight: 600;
+ margin-top: 30px;
+}
+.form-wraper-login h2{
+  font-size: 30px;
+}
+.res{
+  text-align: right;
+  color: #C10100;
+  font-weight: 400;
+  font-size: 17.5px;
+}
+
+/* ==================resetPasswordPop===================== */
+.Reset-pop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0008;
+  z-index: 1000;
+  overflow: auto;
+}
+
+.popups-container{
+  max-width: 500px;
+  width: 100%;
+  background: white;
+  padding: 20px 0px;
+  border-radius: 10px;
+  margin: 45px auto;
+}
+.popups-container .reset-heading{
+  text-align: center;
+  margin-top: 30px;
+  font-size: 27px;
+}
+.popups-container .reset-para{
+  text-align: center;
+  padding: 0 40px;
+  font-size: 17.5px;
+  color: #000000;
+  margin-top: 18px;
+  opacity: 0.7;
+  font-weight: 500;
+}
+
+.Reset-pop i{
+  color: #ffffff;
+  background-color: #c00000;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  position: absolute;
+  font-size: 20px;
+  top: 0.5rem;
+  z-index: 90;
+  right: 2rem;
+  cursor: pointer;
+}
+.reset-input input[type="text"]{
+  border: none;
+  background-color: #eeeeee;
+  padding: 20px 10px;
+  outline: none;
+  border-radius: 5px;
+  width: 100%;
+  max-width: 470px;
+  transition: all 0.2s ease;
+  font-size: 14.5px;
+  font-weight: 500;
+  color: #000000;
+  opacity: 0.9;
+  margin: 40px auto;
+  display: block;
+}
+.btn-popsa{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-top: 80px;
+}
+.reset-input .reset-button-log{
+  background: #C00100;
+  border-radius: 5px;
+  width: 260px;
+  height: 50px;
+  margin: 60px 0px;
+  border: none;
+  outline: none;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
+}
+.wrap-header{
+  font-size: 27px;
+}
+.wrap-para{
+  text-align: center;
+  padding: 0 40px;
+  font-size: 17.5px;
+  color: #000000;
+  margin-top: 18px;
+  opacity: 0.7;
+  font-weight: 500;
 }
